# libqatemcontrol

./: .gitignore  CMakeLists.txt  qatemconnection.cpp  qatemconnection.h  qatemmixeffect.cpp  qatemtypes.h  qupstreamkeysettings.h
cmake/modules/: CMakeLists.txt  FindQAtemControl.cmake
example/qatemswitcher/: CMakeLists.txt
example/qatemuploader/: CMakeLists.txt
scripts/: CMakeLists.txt  setenv_qatemcontrol.sh
